refactor: replace deprecated Class.newInstance()